tests/paczka1/small_fuzzy/66832279.err
Error in line 1: 0sZ5azWd A114 69,9
Error in line 7: A577 A114 96,86
Error in line 10: gNPc5tBèoUk A114 85,4
Error in line 6: F3ApnDalrN S378 34,4
